--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <div class="container">
+    <div class="container">
             <h1>Games Shop</h1>
             <nav>
             <ul>
@@ -27,7 +27,7 @@
     <section id="about">
         <div class="container">
             <img class="sotre-front" src="https://site-gamesshop.vercel.app/images/loja.jpg" alt="Fachada da Loja Games Shop">
-            </div>
+            <div>
                 <h2>Sobre a loja</h2>
                 <p>
                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo dicta incidunt illo sequi aspernatur voluptates tempora dolores! Iusto, est esse architecto ducimus minus enim laboriosam eum adipisci maxime amet doloribus!
@@ -40,13 +40,13 @@
                     <li><img src="https://site-gamesshop.vercel.app/images/xbox.png" alt="Xbox"></li>
                     <li><img src="https://site-gamesshop.vercel.app/images/playstation.png" alt="Playstation"></li>
                 </ul>
-            <div>
+            </div>
         </div>
     </section>
     <section id="contact">
         <div class="container">
             <h2>Contato</h2>
-            </div class="contact-metho">
+            <div class="contact-methods">
                 <div>
                     <h3>Fale Conosco</h3>
                     <form>
@@ -78,11 +78,13 @@
                     </ul>
                 </div>
                 <div>
-                    <h3>Venha ate Nos</h3>
+                    <h3>Venha até Nós</h3>
                     <p>
                         Rua Java Script N 3030, Vila HTML - São Paulo    
                     </p>
                 </div>
+            </div>
+        </div>
     </section>
     <footer>
         <div class="container">
